cmake_minimum_required(VERSION 3.5)
project(HelloWorld)
set(CMAKE_CXX_COMPILER /opt/homebrew/opt/llvm/bin/clang++)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_compile_options(-fsanitize=address)
add_compile_options(-Wall)
add_link_options(-fsanitize=address)
set(CMAKE_COMPILE_WARNING_AS_ERROR ON)
add_executable(hello-world main.cpp)
