bazel_dep(name = "rules_cc", version = "0.0.10")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")

# Override to fetch googletest from main branch instead of BCR versions.
# Bazel 9.1.0+ removed built-in C++ rules, requiring explicit load() statements.
# The BCR versions (1.14.0, 1.15.2, 1.17.0) have BUILD.bazel files that are
# incompatible with this change. The main branch has the updated BUILD.bazel
# with proper load statements for cc_library and cc_test rules.
# This can be removed once a BCR version with Bazel 9+ compatibility is released.
archive_override(
    module_name = "googletest",
    integrity = "sha256-LtxkEoVYMtDcF0VcwxFDz07TiARjglJwtogx10fiesU=",
    strip_prefix = "googletest-main",
    urls = ["https://github.com/google/googletest/archive/refs/heads/main.zip"],
)
